--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     		</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
+    		<div class="bio">
         		<h1>Hi there, I'm Davide Boscaini!</h1>
-				<p>... work on progress ...</p>
-    		</div><!-- /.blurb -->
+				<p>I'm working on the refactoring of my personal website. Stay tuned!</p>
+    		</div><!-- /.bio -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:@gmail.com">email</a></li>
+        		<li><a href="mailto:name.surname@gmail.com">email</a></li>
         		<li><a href="https://github.com/davideboscaini">github.com/davideboscaini</a></li>
 			</ul>
 		</footer>
