--- a/index.html
+++ b/index.html
@@ -1,37 +1,104 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 	<head>
-		<title>Davide Boscaini, PhD</title>
-		<!-- Required meta tags -->
-    	<meta charset="utf-8">
-    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    	<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="bio">
-        		<h1>Hi there, I'm Davide Boscaini!</h1>
-				<p>I'm working on the refactoring of my personal website. Stay tuned!</p>
-				<figure class="figure">
-  					<img src="..." class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-  					<figcaption class="figure-caption">A caption for the above image.</figcaption>
-				</figure>
-    		</div><!-- /.bio -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:name.surname@gmail.com">email</a></li>
-        		<li><a href="https://github.com/davideboscaini">github.com/davideboscaini</a></li>
-			</ul>
-		</footer>
-	</body>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap CSS -->
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+        <!-- Bootswatch CSS -->
+        <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-w+yWASP3zYNxxvwoQBD5fUSc1tctKq4KUiZzxgkBSJACiUp+IbweVKvsEhMI+gz7" crossorigin="anonymous">
+
+        <!-- Bootlint CSS -->
+        <!-- <script src="https://stackpath.bootstrapcdn.com/bootlint/0.15.1/bootlint.min.js" integrity="sha384-JQfZvbsydam1eUSPN2oJhxsmu6S4ODLD7AcGFhDIih2D7NGt0uLiIi90Hp43QcUF" crossorigin="anonymous"></script> -->
+    
+        <!-- Font Awesome CSS -->
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+        <!-- Academicons CSS -->
+        <link href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css" rel="stylesheet">
+
+        <!-- personal CSS -->
+        <link href="css/my_style.css" rel="stylesheet">
+
+        <title>Davide Boscaini, PhD</title>
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
+            <div class="container" style="max-width:750px">
+                <span class="navbar-brand mb-0 h1">Davide Boscaini</span>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="https://davideboscaini.github.io/">home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./sections/publications.html">publications</a>
+                        </li>
+                        <!--<li class="nav-item">
+                            <a class="nav-link" href="./sections/talks.html">talks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./sections/teaching.html">teaching</a>
+                        </li>-->
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container" style="margin-top:75px; max-width:750px">
+
+            <ul class="list-group list-group-flush">
+
+                <!-- bio -->
+                <li class="list-group-item list-group-item-action">
+                    <div class="media">
+                        <div class="media-body">
+                            <h3 class="mt-0">About me</h3>
+                            <p class="lead">
+                                Hi! I'm a PostDoc Researcher at Technologies of Vision (TeV) unit 
+                                at the Fondazione Bruno Kessler (FBK), Trento.<br>
+                                My research interests are in the field of 
+                                Geometric Deep Learning, Shape Analysis, and Computer Vision.
+                            </p>
+                            <!--</p>
+                                I got my PhD in Computational Science at USI Lugano 
+                                under the supervision of prof. <a href="">Michael Bronstein</a>.
+                            </p>-->
+                        </div>
+                        <img class="align-self-start mr-3" src="./data/portrait_170928.jpg" alt="Portrait" width="200" height="267">
+                        <!-- original size: width = 1098, height = 1464 -->
+                    </div>
+                </li>
+
+                <!-- Contacts -->
+                <li class="list-group-item list-group-item-action">
+                    <h3>Contacts</h3>
+                    <address>
+                        <a href="https://www.fbk.eu/en/"><strong>Fondazione Bruno Kessler</strong></a><br>
+                        <a href="https://tev.fbk.eu/">Tecnologies of Vision</a><br>
+                        Via Sommarive 18<br>
+                        38123 Povo, Trento, Italy<br>
+                        Phone: (+39) 0461 314525<br> <!-- <abbr title="Phone">P:</abbr> -->
+                        Mail: <img style="vertical-align:top" src="./data/mail_fbk.png" class="figure-img img-fluid rounded" alt="FBK mail" width="162" height="22"><br>
+                        <!-- orig dim: width="960", height="136" -->
+                        <!-- <span class="text-monospace"></span> -->
+                    </address>
+
+                </li>
+            </ul>
+        </div>
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    </body>
 </html>
