--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 
         <div class="container" style="margin-top:75px; max-width:750px">
 
-            <span class="badge badge-warning" style="margin-bottom:10px">webpage under revision!</span>
+            <span class="badge badge-warning" style="margin-bottom:10px; display:flex; justify-content:center; align-items:center;"> 
+                <img src="https://img.icons8.com/metro/52/000000/road-worker.png" width="16" height="16" style="margin-right:5px"> 
+                webpage under revision!
+            </span>
 
             <ul class="list-group list-group-flush">
 
