--- a/sections/publications.html
+++ b/sections/publications.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="../index.html">home</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="./sections/publications.html">publications <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="./publications.html">publications <span class="sr-only">(current)</span></a>
                         </li>
                         <!--<li class="nav-item">
                             <a class="nav-link" href="./sections/talks.html">talks</a>
@@ -62,7 +62,10 @@
                 <i class="ai ai-researchgate ai-3x"></i>
             </h1>-->
 
-            <span class="badge badge-warning" style="margin-bottom:10px">webpage under revision!</span>
+            <span class="badge badge-warning" style="margin-bottom:10px; display:flex; justify-content:center; align-items:center;"> 
+                <img src="https://img.icons8.com/metro/52/000000/road-worker.png" width="16" height="16" style="margin-right:5px"> 
+                webpage under revision!
+            </span>
 
             <h3>Papers</h3>
             <ul class="list-group list-group-flush">
