--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         <link href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css" rel="stylesheet">
 
         <!-- personal CSS -->
-        <link href="css/my_style.css" rel="stylesheet">
+        <!-- <link href="css/my_style.css" rel="stylesheet"> -->
 
         <title>Davide Boscaini, PhD</title>
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
+
+        <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-primary">
             <div class="container" style="max-width:750px">
                 <span class="navbar-brand mb-0 h1">Davide Boscaini</span>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
