--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
         <!-- Bootswatch CSS -->
-        <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-T5jhQKMh96HMkXwqVMSjF3CmLcL1nT9//tCqu9By5XSdj7CwR0r+F3LTzUdfkkQf" crossorigin="anonymous">
+        <!-- <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-T5jhQKMh96HMkXwqVMSjF3CmLcL1nT9//tCqu9By5XSdj7CwR0r+F3LTzUdfkkQf" crossorigin="anonymous"> -->
  
         <!-- Bootlint CSS -->
         <!-- <script src="https://stackpath.bootstrapcdn.com/bootlint/0.15.1/bootlint.min.js" integrity="sha384-JQfZvbsydam1eUSPN2oJhxsmu6S4ODLD7AcGFhDIih2D7NGt0uLiIi90Hp43QcUF" crossorigin="anonymous"></script> -->
