Work in progress

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
             <div class="container" style="max-width:750px">
                 <span class="navbar-brand mb-0 h1">Davide Boscaini</span>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
