--- a/sections/publications.html
+++ b/sections/publications.html
@@ -144,7 +144,27 @@
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Davide Eynard, Drosos Kourounis, Michael M. Bronstein</p>
-                    <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 34(5), 2015</p>
+                    <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 34(2), pp. 265-274, 2015</p>
+
+                    <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                    <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
+                    <a href="#" class="badge badge-primary">video</a>
+                    <a href="#" class="badge badge-primary">poster</a>
+                </li>
+
+                <!-- Local Signature Quantization -->
+                <li class="list-group-item list-group-item-action">
+                    <figure class="figure">
+                        <img src="../data/thumb/lsq_3dor.png" class="figure-img img-fluid border rounded-0" alt="LSQ by SC paper thumbnail">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">Local Signature Quantization by Sparse Coding</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1"><strong>Davide Boscaini</strong>, Umberto Castellani</p>
+                    <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, pp. 9-16, 2013</p>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
