Added ASC paper

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -154,13 +154,33 @@
                     <a href="#" class="badge badge-primary">poster</a>
                 </li>
 
+                <!-- A Sparse Coding Approach -->
+                <li class="list-group-item list-group-item-action">
+                    <figure class="figure">
+                        <img src="../data/thumb/asc_tvc.png" class="figure-img img-fluid border rounded-0" alt="SC-for-LTG paper thumbnail">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">A sparse coding approach for local-to-global 3D shape description</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1"><strong>Davide Boscaini</strong>, Umberto Castellani</p>
+                    <p class="mb-1"><i>The Visual Computer (TVC)</i>, 30(11), pp. 1233–1245, 2014</p>
+
+                    <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                    <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
+                    <a href="#" class="badge badge-primary">video</a>
+                    <a href="#" class="badge badge-primary">poster</a>
+                </li>
+
                 <!-- Local Signature Quantization -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/lsq_3dor.png" class="figure-img img-fluid border rounded-0" alt="LSQ by SC paper thumbnail">
+                        <img src="../data/thumb/lsq_3dor.png" class="figure-img img-fluid border rounded-0" alt="LSC-by-SC paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-                        <h5 class="mb-1">Local Signature Quantization by Sparse Coding</h5>
+                        <h5 class="mb-1">Local signature quantization by sparse coding</h5>
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Umberto Castellani</p>
