--- a/sections/publications.html
+++ b/sections/publications.html
@@ -137,7 +137,7 @@
                 <!-- SFO -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/sfo.png" class="figure-img img-fluid border rounded-0" alt="SFO paper thumbnail">
+                        <img src="../data/thumb/2015_sfo.png" class="figure-img img-fluid border rounded-0" alt="SFO paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Shape-From-Operator: Recovering shapes from intrisic operators</h5>
@@ -157,7 +157,7 @@
                 <!-- A Sparse Coding Approach -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/asc_tvc.png" class="figure-img img-fluid border rounded-0" alt="SC-for-LTG paper thumbnail">
+                        <img src="../data/thumb/2014_asc.png" class="figure-img img-fluid border rounded-0" alt="SC-for-LTG paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">A sparse coding approach for local-to-global 3D shape description</h5>
@@ -177,7 +177,7 @@
                 <!-- Local Signature Quantization -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/lsq_3dor.png" class="figure-img img-fluid border rounded-0" alt="LSC-by-SC paper thumbnail">
+                        <img src="../data/thumb/2013_lsq.png" class="figure-img img-fluid border rounded-0" alt="LSC-by-SC paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Local signature quantization by sparse coding</h5>
