--- a/sections/publications.html
+++ b/sections/publications.html
@@ -154,6 +154,26 @@
                     <a href="#" class="badge badge-primary">poster</a>
                 </li>
 
+                <!-- Coulomb -->
+                <li class="list-group-item list-group-item-action">
+                    <figure class="figure">
+                        <img src="../data/thumb/2014_coulomb.png" class="figure-img img-fluid border rounded-0" alt="Coulomb paper thumbnail">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">Coulomb shapes: using electrostatic forces for deformation-invariant shape representation</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1"><strong>Davide Boscaini</strong>, Ramunas Girdziusaz, Michael M. Bronstein</p>
+                    <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, pp.9-15, 2014</p>
+
+                    <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                    <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
+                    <a href="#" class="badge badge-primary">video</a>
+                    <a href="#" class="badge badge-primary">poster</a>
+                </li>
+
                 <!-- A Sparse Coding Approach -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
