--- a/sections/publications.html
+++ b/sections/publications.html
@@ -113,6 +113,26 @@
                     <a href="#" class="badge badge-primary">poster</a>
                 </li>
 
+                <!-- LSCNN -->
+                <li class="list-group-item list-group-item-action">
+                    <figure class="figure">
+                        <img src="../data/thumb/2015_lscnn.png" class="figure-img img-fluid border rounded-0" alt="LSCNN paper thumbnail">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">Learning class‐specific descriptors for deformable shapes using localized spectral convolutional networks</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Simone Melzi, Michael M. Bronstein, Umberto Castellani, Pierre Vandergheynst</p>
+                    <p class="mb-1"><i>Computer Graphics Forum</i> 34(5), 13-23, 2015</p>
+
+                    <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
+                    <a href="#" class="badge badge-primary">video</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
+                </li>
+
                 <!-- GCNN -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
@@ -164,14 +184,14 @@
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Ramunas Girdziusaz, Michael M. Bronstein</p>
-                    <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, pp.9-15, 2014</p>
+                    <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, pp. 9-15, 2014</p>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
-                    <a href="#" class="badge badge-primary">poster</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
                 <!-- A Sparse Coding Approach -->
@@ -188,10 +208,10 @@
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
-                    <a href="#" class="badge badge-primary">poster</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
                 <!-- Local Signature Quantization -->
@@ -208,10 +228,10 @@
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
-                    <a href="#" class="badge badge-primary">poster</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
             </ul>
