--- a/sections/publications.html
+++ b/sections/publications.html
@@ -71,10 +71,10 @@
             <h3>Papers</h3>
             <ul class="list-group list-group-flush">
 
-                <!-- ACNN -->
+                <!-- 2016, ACNN -->
                 <li class="list-group-item list-group-item-action"> <!--flex-column align-items-start-->
                     <figure class="figure">
-                        <img src="../data/thumb/acnn.png" class="figure-img img-fluid border rounded-0" alt="ACNN paper thumbnail">
+                        <img src="../data/thumb/2016_acnn_nips.png" class="figure-img img-fluid border rounded-0" alt="ACNN paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Learning shape correspondence with anisotropic convolutional neural networks</h5>
@@ -92,10 +92,10 @@
                     <a href="#" class="badge badge-primary">poster</a>
                 </li>
 
-                <!-- ADD -->
+                <!-- 2016, ADD -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/add.png" class="figure-img img-fluid border rounded-0" alt="ADD paper thumbnail">
+                        <img src="../data/thumb/2016_add.png" class="figure-img img-fluid border rounded-0" alt="ADD paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Anisotropic diffusion descriptors</h5>
@@ -107,13 +107,13 @@
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
-                    <a href="#" class="badge badge-primary">poster</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
-                <!-- LSCNN -->
+                <!-- 2015, LSCNN -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
                         <img src="../data/thumb/2015_lscnn.png" class="figure-img img-fluid border rounded-0" alt="LSCNN paper thumbnail">
@@ -133,7 +133,7 @@
                     <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
-                <!-- GCNN -->
+                <!-- 2015, GCNN -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
                         <img src="../data/thumb/gcnn_iccvw.png" class="figure-img img-fluid border rounded-0" alt="GCNN paper thumbnail">
@@ -154,7 +154,7 @@
                     <a href="#" class="badge badge-primary">poster</a>
                 </li>
 
-                <!-- SFO -->
+                <!-- 2015, SFO -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
                         <img src="../data/thumb/2015_sfo.png" class="figure-img img-fluid border rounded-0" alt="SFO paper thumbnail">
@@ -168,13 +168,13 @@
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
-                    <a href="#" class="badge badge-primary">poster</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
-                <!-- Coulomb -->
+                <!-- 2014, Coulomb -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
                         <img src="../data/thumb/2014_coulomb.png" class="figure-img img-fluid border rounded-0" alt="Coulomb paper thumbnail">
@@ -194,7 +194,7 @@
                     <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
-                <!-- A Sparse Coding Approach -->
+                <!-- 2014, A Sparse Coding Approach -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
                         <img src="../data/thumb/2014_asc.png" class="figure-img img-fluid border rounded-0" alt="SC-for-LTG paper thumbnail">
@@ -214,7 +214,7 @@
                     <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
-                <!-- Local Signature Quantization -->
+                <!-- 2013, Local Signature Quantization -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
                         <img src="../data/thumb/2013_lsq.png" class="figure-img img-fluid border rounded-0" alt="LSC-by-SC paper thumbnail">
