--- a/sections/publications.html
+++ b/sections/publications.html
@@ -103,7 +103,7 @@
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Emanuele Rodolà, Michael M. Bronstein, Daniel Cremers</p>
                     <p class="mb-1"><i>Computer Graphics Forum (Proc. Eurographics)</i>, 2016</p>
-                    <small></small><br>
+                    <!-- <small></small><br> -->
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -136,7 +136,7 @@
                 <!-- 2015, GCNN -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/gcnn_iccvw.png" class="figure-img img-fluid border rounded-0" alt="GCNN paper thumbnail">
+                        <img src="../data/thumb/2015_gcnn_iccvw.png" class="figure-img img-fluid border rounded-0" alt="GCNN paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Geodesic convolutional neural networks on Riemannian manifolds</h5>
@@ -148,10 +148,10 @@
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
-                    <a href="#" class="badge badge-primary">poster</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
                 <!-- 2015, SFO -->
