--- a/sections/publications.html
+++ b/sections/publications.html
@@ -71,8 +71,30 @@
             <h3>Papers</h3>
             <ul class="list-group list-group-flush">
 
-                <!-- 2016, ACNN -->
+                <!-- 2017, MoNet -->
                 <li class="list-group-item list-group-item-action"> <!--flex-column align-items-start-->
+                    <figure class="figure">
+                        <img src="../data/thumb/2017_monet.png" class="figure-img img-fluid border rounded-0" alt="MoNet paper thumbnail">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">Geometric deep learning on graphs and manifolds using mixture model CNNs</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1">Federico Monti*, <strong>Davide Boscaini</strong>*, Jonathan Masci, Emanuele Rodolà, Jan Svoboda, Michael M. Bronstein
+                    <small>(* denotes equal contibution)</small></p>
+                    <p class="mb-1"><i>Computer Vision and Pattern Recognition Conference (CVPR)</i>, 2017 <small>Oral presentation</small></p>
+                    <!-- <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
+
+                    <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
+                    <a href="#" class="badge badge-primary">video</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
+                </li>
+
+                <!-- 2016, ACNN -->
+                <li class="list-group-item list-group-item-action">
                     <figure class="figure">
                         <img src="../data/thumb/2016_acnn_nips.png" class="figure-img img-fluid border rounded-0" alt="ACNN paper thumbnail">
                     </figure>
@@ -81,15 +103,15 @@
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Emanuele Rodolà, Michael M. Bronstein</p>
-                    <p class="mb-1">Proc. <i>NIPS</i>, 2016</p>
+                    <p class="mb-1"><i>Neural Information Processing Systems (NIPS)</i>, 2016</p>
                     <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
-                    <a href="#" class="badge badge-primary">poster</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
                 <!-- 2016, ADD -->
@@ -102,8 +124,8 @@
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Emanuele Rodolà, Michael M. Bronstein, Daniel Cremers</p>
-                    <p class="mb-1"><i>Computer Graphics Forum (Proc. Eurographics)</i>, 2016</p>
-                    <!-- <small></small><br> -->
+                    <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2016</p>
+                    <small>Oral presentation at Eurographics 2016</small><br>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -165,6 +187,7 @@
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Davide Eynard, Drosos Kourounis, Michael M. Bronstein</p>
                     <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 34(2), pp. 265-274, 2015</p>
+                    <small>Oral presentation at Eurographics 2015</small><br>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
