--- a/sections/publications.html
+++ b/sections/publications.html
@@ -63,27 +63,79 @@
                 <i class="ai ai-researchgate ai-3x"></i>
             </h1>-->
 
-            <span class="badge badge-warning" style="margin-bottom:10px; display:flex; justify-content:center; align-items:center;"> 
+            <!-- <span class="badge badge-warning" style="margin-bottom:10px; display:flex; justify-content:center; align-items:center;"> 
                 <img src="https://img.icons8.com/metro/52/000000/road-worker.png" width="16" height="16" style="margin-right:5px"> 
                 webpage under revision!
-            </span>
+            </span> -->
 
             <h3>Papers</h3>
             <ul class="list-group list-group-flush">
 
+                <!-- Learning interaction patterns from surface representations of protein structure.
+                P Gainza, F Sverrisson, F Monti, E Rodolà, D Boscaini, M Bronstein, Bruno E Correia -->
+
+                <!-- 2019, Structured DA -->
+                <li class="list-group-item list-group-item-action">
+                    <figure class="figure">
+                        <img src="../data/thumb/2019_sda.png" class="figure-img img-fluid border rounded-0" 
+                        alt="Structured DA paper thumbnail">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">Structured domain adaptation for 3D keypoint estimation</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1">Levi O. Vasconcelos, Massimiliano Mancini, <strong>Davide Boscaini</strong>, 
+                        Barbara Caputo, Elisa Ricci</p>
+                    <p class="mb-1"><i>International Conference on 3D Vision (3DV)</i>, 2019
+                        &mdash; <font color="#a21a2a">Oral presentation</font></p>
+
+                    <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
+                    <a href="#" class="badge badge-primary">video</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
+                </li>
+
+                <!-- 2019, 3D Shape Segmentation -->
+                <li class="list-group-item list-group-item-action">
+                    <figure class="figure">
+                        <img src="../data/thumb/2019_segm.png" class="figure-img img-fluid border rounded-0" 
+                        alt="3D Shape Segmenation paper thumbnail">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">3D shape segmentation with geometric deep learning</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
+                    <p class="mb-1"><i>International Conference on Image Analysis and Processing (ICIAP)</i>, 2019
+                        &mdash; <font color="#a21a2a">Spotlight presentation</font></p>
+
+                    <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
+                    <a href="#" class="badge badge-primary">video</a>
+                    <a href="#" class="badge badge-primary">poster</a> -->
+                </li>
+
                 <!-- 2017, MoNet -->
                 <li class="list-group-item list-group-item-action"> <!--flex-column align-items-start-->
                     <figure class="figure">
-                        <img src="../data/thumb/2017_monet.png" class="figure-img img-fluid border rounded-0" alt="MoNet paper thumbnail">
+                        <img src="../data/thumb/2017_monet.png" class="figure-img img-fluid border rounded-0" 
+                        alt="MoNet paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Geometric deep learning on graphs and manifolds using mixture model CNNs</h5>
                         <small class="text-muted"></small>
                     </div>
-                    <p class="mb-1">Federico Monti*, <strong>Davide Boscaini</strong>*, Jonathan Masci, Emanuele Rodolà, Jan Svoboda, Michael M. Bronstein
-                    <small>(* denotes equal contibution)</small></p>
-                    <p class="mb-1"><i>Computer Vision and Pattern Recognition Conference (CVPR)</i>, 2017 <small>Oral presentation</small></p>
-                    <!-- <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
+                    <p class="mb-1">Federico Monti*, <strong>Davide Boscaini</strong>*, Jonathan Masci, 
+                        Emanuele Rodolà, Jan Svoboda, Michael M. Bronstein 
+                        &emsp; <small><font color="#979797">(* denotes equal contibution)</font></small></p>
+                    <p class="mb-1"><i>Computer Vision and Pattern Recognition Conference (CVPR)</i>, 2017 
+                        &mdash; <font color="#a21a2a">Oral presentation</font></p>
+                    <!-- <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> 
+                        <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -117,15 +169,17 @@
                 <!-- 2016, ADD -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/2016_add.png" class="figure-img img-fluid border rounded-0" alt="ADD paper thumbnail">
+                        <img src="../data/thumb/2016_add.png" class="figure-img img-fluid border rounded-0" 
+                        alt="ADD paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Anisotropic diffusion descriptors</h5>
                         <small class="text-muted"></small>
                     </div>
-                    <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Emanuele Rodolà, Michael M. Bronstein, Daniel Cremers</p>
-                    <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2016</p>
-                    <small>Oral presentation at Eurographics 2016</small><br>
+                    <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Emanuele Rodolà, 
+                        Michael M. Bronstein, Daniel Cremers</p>
+                    <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2016 
+                        &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2016</font></p>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -138,14 +192,18 @@
                 <!-- 2015, LSCNN -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/2015_lscnn.png" class="figure-img img-fluid border rounded-0" alt="LSCNN paper thumbnail">
+                        <img src="../data/thumb/2015_lscnn.png" class="figure-img img-fluid border rounded-0" 
+                        alt="LSCNN paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-                        <h5 class="mb-1">Learning class‐specific descriptors for deformable shapes using localized spectral convolutional networks</h5>
+                        <h5 class="mb-1">Learning class‐specific descriptors for deformable shapes 
+                            using localized spectral convolutional networks</h5>
                         <small class="text-muted"></small>
                     </div>
-                    <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Simone Melzi, Michael M. Bronstein, Umberto Castellani, Pierre Vandergheynst</p>
-                    <p class="mb-1"><i>Computer Graphics Forum</i> 34(5), 13-23, 2015</p>
+                    <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Simone Melzi, 
+                        Michael M. Bronstein, Umberto Castellani, Pierre Vandergheynst</p>
+                    <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2015
+                        &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2015</font></p>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -158,15 +216,19 @@
                 <!-- 2015, GCNN -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/2015_gcnn_iccvw.png" class="figure-img img-fluid border rounded-0" alt="GCNN paper thumbnail">
+                        <img src="../data/thumb/2015_gcnn_iccvw.png" class="figure-img img-fluid border rounded-0" 
+                        alt="GCNN paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Geodesic convolutional neural networks on Riemannian manifolds</h5>
                         <small class="text-muted"></small>
                     </div>
-                    <p class="mb-1">Jonathan Masci*, <strong>Davide Boscaini</strong>*, Michael M. Bronstein, Pierre Vandergheynst</p>
-                    <p class="mb-1"><i>International IEEE Workshop on 3D Representation and Recognition (3dRR)</i>, 2015</p>
-                    <small>* denotes equal contibution</small><br>
+                    <p class="mb-1">Jonathan Masci*, <strong>Davide Boscaini</strong>*, 
+                        Michael M. Bronstein, Pierre Vandergheynst
+                        &emsp; <small><font color="#979797">(* denotes equal contibution)</font></small></p>
+                    <p class="mb-1"><i>IEEE Workshop on 3D Representation and Recognition (3dRR)</i>, 2015
+                        &mdash; <font color="#a21a2a">Oral presentation</font></p>
+                        <!-- International -->
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -179,15 +241,16 @@
                 <!-- 2015, SFO -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/2015_sfo.png" class="figure-img img-fluid border rounded-0" alt="SFO paper thumbnail">
+                        <img src="../data/thumb/2015_sfo.png" class="figure-img img-fluid border rounded-0" 
+                        alt="SFO paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Shape-From-Operator: Recovering shapes from intrisic operators</h5>
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Davide Eynard, Drosos Kourounis, Michael M. Bronstein</p>
-                    <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 34(2), pp. 265-274, 2015</p>
-                    <small>Oral presentation at Eurographics 2015</small><br>
+                    <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2015
+                        &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2015</font></p>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -200,14 +263,17 @@
                 <!-- 2014, Coulomb -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/2014_coulomb.png" class="figure-img img-fluid border rounded-0" alt="Coulomb paper thumbnail">
+                        <img src="../data/thumb/2014_coulomb.png" class="figure-img img-fluid border rounded-0" 
+                        alt="Coulomb paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
-                        <h5 class="mb-1">Coulomb shapes: using electrostatic forces for deformation-invariant shape representation</h5>
+                        <h5 class="mb-1">Coulomb shapes: using electrostatic forces 
+                            for deformation-invariant shape representation</h5>
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Ramunas Girdziusaz, Michael M. Bronstein</p>
-                    <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, pp. 9-15, 2014</p>
+                    <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, 2014
+                        &mdash; <font color="#a21a2a">Oral presentation</font></p>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -220,14 +286,15 @@
                 <!-- 2014, A Sparse Coding Approach -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/2014_asc.png" class="figure-img img-fluid border rounded-0" alt="SC-for-LTG paper thumbnail">
+                        <img src="../data/thumb/2014_asc.png" class="figure-img img-fluid border rounded-0" 
+                        alt="SC-for-LTG paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">A sparse coding approach for local-to-global 3D shape description</h5>
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Umberto Castellani</p>
-                    <p class="mb-1"><i>The Visual Computer (TVC)</i>, 30(11), pp. 1233–1245, 2014</p>
+                    <p class="mb-1"><i>The Visual Computer (TVC)</i>, 2014</p>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -240,14 +307,16 @@
                 <!-- 2013, Local Signature Quantization -->
                 <li class="list-group-item list-group-item-action">
                     <figure class="figure">
-                        <img src="../data/thumb/2013_lsq.png" class="figure-img img-fluid border rounded-0" alt="LSC-by-SC paper thumbnail">
+                        <img src="../data/thumb/2013_lsq.png" class="figure-img img-fluid border rounded-0" 
+                        alt="LSC-by-SC paper thumbnail">
                     </figure>
                     <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
                         <h5 class="mb-1">Local signature quantization by sparse coding</h5>
                         <small class="text-muted"></small>
                     </div>
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Umberto Castellani</p>
-                    <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, pp. 9-16, 2013</p>
+                    <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, 2013
+                        &mdash; <font color="#a21a2a">Oral presentation</font></p>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
