--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
         <div class="container" style="margin-top:75px; max-width:750px">
 
-            <span class="badge badge-warning" style="margin-bottom:10px; display:flex; justify-content:center; align-items:center;"> 
+            <!-- <span class="badge badge-warning" style="margin-bottom:10px; display:flex; justify-content:center; align-items:center;"> 
                 <img src="https://img.icons8.com/metro/52/000000/road-worker.png" width="16" height="16" style="margin-right:5px"> 
                 webpage under revision!
-            </span>
+            </span> -->
 
             <ul class="list-group list-group-flush">
 
@@ -78,7 +78,8 @@
                                 under the supervision of prof. <a href="">Michael Bronstein</a>.
                             </p>-->
                         </div>
-                        <img class="align-self-start mr-3" src="./data/portrait_170928.jpg" alt="Portrait" width="200" height="267">
+                        <img class="align-self-start mr-3" src="./data/portrait_170928.jpg" 
+                            alt="Portrait" width="200" height="267">
                         <!-- original size: width = 1098, height = 1464 -->
                     </div>
                 </li>
