--- a/sections/publications.html
+++ b/sections/publications.html
@@ -55,13 +55,26 @@
 
         <div class="container" style="margin-top:75px; max-width:750px">
 
-            <!--<h1>
+            <!-- Google Scholar -->
+            <a href="https://scholar.google.com/citations?hl=en&user=dT1N2IUAAAAJ">
                 <i class="ai ai-google-scholar ai-3x"></i>
-                <i class="ai ai-arxiv ai-3x"></i>
+            </a>
+            <!-- dblp -->
+            <a href="https://dblp.uni-trier.de/pers/hd/b/Boscaini:Davide">
                 <i class="ai ai-dblp ai-3x"></i>
+            </a>
+            <!-- Semantic Scholar -->
+            <a href="https://www.semanticscholar.org/author/Davide-Boscaini/1804261">
                 <i class="ai ai-semantic-scholar ai-3x"></i>
+            </a>
+            <!-- <ul class="list-group list-group-flush">
+                <li class="list-group-item list-group-item-action">
+                    <a href="https://scholar.google.com/citations?hl=en&user=dT1N2IUAAAAJ">
+                        <i class="ai ai-google-scholar ai-3x"></i>
+                    </a>
+                </li>
                 <i class="ai ai-researchgate ai-3x"></i>
-            </h1>-->
+            </ul> -->
 
             <!-- <span class="badge badge-warning" style="margin-bottom:10px; display:flex; justify-content:center; align-items:center;"> 
                 <img src="https://img.icons8.com/metro/52/000000/road-worker.png" width="16" height="16" style="margin-right:5px"> 
@@ -326,6 +339,10 @@
                     <a href="#" class="badge badge-primary">poster</a> -->
                 </li>
 
+            </ul>
+
+            <h3>Patents</h3>
+            <ul class="list-group list-group-flush">
             </ul>
 
         </div>
