--- a/sections/publications.html
+++ b/sections/publications.html
@@ -56,17 +56,17 @@
         <div class="container" style="margin-top:75px; max-width:750px">
 
             <!-- Google Scholar -->
-            <a href="https://scholar.google.com/citations?hl=en&user=dT1N2IUAAAAJ">
+            <!-- <a href="https://scholar.google.com/citations?hl=en&user=dT1N2IUAAAAJ">
                 <i class="ai ai-google-scholar ai-3x"></i>
-            </a>
+            </a> -->
             <!-- dblp -->
-            <a href="https://dblp.uni-trier.de/pers/hd/b/Boscaini:Davide">
+            <!-- <a href="https://dblp.uni-trier.de/pers/hd/b/Boscaini:Davide">
                 <i class="ai ai-dblp ai-3x"></i>
-            </a>
+            </a> -->
             <!-- Semantic Scholar -->
-            <a href="https://www.semanticscholar.org/author/Davide-Boscaini/1804261">
+            <!-- <a href="https://www.semanticscholar.org/author/Davide-Boscaini/1804261">
                 <i class="ai ai-semantic-scholar ai-3x"></i>
-            </a>
+            </a> -->
             <!-- <ul class="list-group list-group-flush">
                 <li class="list-group-item list-group-item-action">
                     <a href="https://scholar.google.com/citations?hl=en&user=dT1N2IUAAAAJ">
@@ -341,9 +341,9 @@
 
             </ul>
 
-            <h3>Patents</h3>
+            <!-- <h3>Patents</h3>
             <ul class="list-group list-group-flush">
-            </ul>
+            </ul> -->
 
         </div>
     </body>
