--- a/index.html
+++ b/index.html
@@ -68,15 +68,14 @@
                         <div class="media-body">
                             <h3 class="mt-0">About me</h3>
                             <p class="lead">
-                                Hi! I'm a PostDoc Researcher at Technologies of Vision (TeV) unit 
-                                at the Fondazione Bruno Kessler (FBK), Trento.<br>
+                                Hi! I'm a PostDoc Researcher at <a href="https://tev.fbk.eu">Technologies of Vision</a> (TeV) unit 
+                                at the <a href="https://www.fbk.eu/en/">Fondazione Bruno Kessler</a> (FBK) in Trento, IT. 
+                                I got my PhD in Computational Science under the supervision of prof. 
+                                <a href="https://www.imperial.ac.uk/people/m.bronstein">Michael Bronstein</a>
+                                at <a href="https://www.usi.ch/en">Univerista' della Svizzera Italiana</a> (USI) in Lugano, CH.
                                 My research interests are in the field of 
-                                Geometric Deep Learning, Shape Analysis, and Computer Vision.
+                                Geometric Deep Learning, Computer Vision and Shape Analysis.
                             </p>
-                            <!--</p>
-                                I got my PhD in Computational Science at USI Lugano 
-                                under the supervision of prof. <a href="">Michael Bronstein</a>.
-                            </p>-->
                         </div>
                         <img class="align-self-start mr-3" src="./data/portrait_170928.jpg" 
                             alt="Portrait" width="200" height="267">
