--- a/sections/publications.html
+++ b/sections/publications.html
@@ -84,8 +84,45 @@
             <h3>Papers</h3>
             <ul class="list-group list-group-flush">
 
-                <!-- Learning interaction patterns from surface representations of protein structure.
-                P Gainza, F Sverrisson, F Monti, E Rodolà, D Boscaini, M Bronstein, Bruno E Correia -->
+                <!-- 2020, Nature Methods -->
+                <li class="list-group-item list-group-item-action">
+                    <figure class="figure">
+                        <img src="../data/thumb/2020_nature_methods.png" class="figure-img img-fluid border rounded-0" 
+                        alt="Proteins paper thumbnail" style="height: 100px">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">Deciphering interaction fingerprints from protein molecular surfaces
+                            using geometric deep learning</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1">Pablo Gainza, Freyr Sverrisson, Federico Monti, Emanuele Rodolà,
+                        <strong>Davide Boscaini</strong>, Michael M. Bronstein, Bruno E. Correia</p>
+                    <p class="mb-1"><i>Nature Methods</i>
+                        &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font></p>
+
+                    <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                </li>
+
+
+                <!-- 2019, NeurIPS workshop -->
+                <li class="list-group-item list-group-item-action">
+                    <figure class="figure">
+                        <img src="../data/thumb/2019_neurips_workshop.png" class="figure-img img-fluid border rounded-0" 
+                        alt="NeurIPS workshop thumbnail">
+                    </figure>
+                    <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+                        <h5 class="mb-1">Learning interaction patterns from surface representations of protein structure</h5>
+                        <small class="text-muted"></small>
+                    </div>
+                    <p class="mb-1">Pablo Gainza, Freyr Sverrisson, Federico Monti, Emanuele Rodolà,
+                        <strong>Davide Boscaini</strong>, Michael M. Bronstein, Bruno E. Correia</p>
+                    <p class="mb-1"><i>NeurIPS Workshop on Graph Representation Learning</i>, 2019</p>
+
+                    <a href="#" class="badge badge-primary">pdf</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                </li>
+
 
                 <!-- 2019, Structured DA -->
                 <li class="list-group-item list-group-item-action">
@@ -123,6 +160,8 @@
                     <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
                     <p class="mb-1"><i>International Conference on Image Analysis and Processing (ICIAP)</i>, 2019
                         &mdash; <font color="#a21a2a">Spotlight presentation</font></p>
+                    <small>Also available as technical report: <i class="ai ai-arxiv ai-1x"></i> 
+                        <a href="https://arxiv.org/abs/2002.00397">arXiv:2002.00397 </a></small><br>
 
                     <a href="#" class="badge badge-primary">pdf</a>
                     <a href="#" class="badge badge-primary">biblio</a>
@@ -239,7 +278,7 @@
                     <p class="mb-1">Jonathan Masci*, <strong>Davide Boscaini</strong>*, 
                         Michael M. Bronstein, Pierre Vandergheynst
                         &emsp; <small><font color="#979797">(* denotes equal contibution)</font></small></p>
-                    <p class="mb-1"><i>IEEE Workshop on 3D Representation and Recognition (3dRR)</i>, 2015
+                    <p class="mb-1"><i>ICCV Workshop on 3D Representation and Recognition (3dRR)</i>, 2015
                         &mdash; <font color="#a21a2a">Oral presentation</font></p>
                         <!-- International -->
 
