--- a/sections/publications.html
+++ b/sections/publications.html
@@ -97,7 +97,7 @@
                     </div>
                     <p class="mb-1">Pablo Gainza, Freyr Sverrisson, Federico Monti, Emanuele Rodolà,
                         <strong>Davide Boscaini</strong>, Michael M. Bronstein, Bruno E. Correia</p>
-                    <p class="mb-1"><i>Nature Methods</i>
+                    <p class="mb-1"><i>Nature Methods</i>, 2020
                         &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font></p>
 
                     <a href="#" class="badge badge-primary">pdf</a>
