--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 of the <a href="https://www.fbk.eu/en/">Fondazione Bruno Kessler</a> (FBK) in Trento, IT. 
                                 I got my PhD in Computational Science under the supervision of prof. 
                                 <a href="https://www.imperial.ac.uk/people/m.bronstein">Michael Bronstein</a>
-                                from the <a href="https://www.usi.ch/en">Univerista' della Svizzera Italiana</a> (USI) in Lugano, CH.
+                                from the <a href="https://www.usi.ch/en">Universita' della Svizzera italiana</a> (USI) in Lugano, CH.
                                 My research interests include 3D Computer Vision and 3D Deep Learning.
                                 I'm one of the pioneers of Geometric Deep Learning.
                             </p>
