Fixed minor typo

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h3>Contacts</h3>
                     <address>
                         <a href="https://www.fbk.eu/en/"><strong>Fondazione Bruno Kessler</strong></a><br>
-                        <a href="https://tev.fbk.eu/">Tecnologies of Vision</a><br>
+                        <a href="https://tev.fbk.eu/">Technologies of Vision</a><br>
                         Via Sommarive 18<br>
                         38123 Povo, Trento, Italy<br>
                         Phone: (+39) 0461 314525<br> <!-- <abbr title="Phone">P:</abbr> -->
