--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
                             <p class="lead">
                                 Hi! I'm a Research Scientist at the <a href="https://tev.fbk.eu">Technologies of Vision</a> (TeV) Lab 
                                 of the <a href="https://www.fbk.eu/en/">Fondazione Bruno Kessler</a> (FBK) in Trento, IT. 
-                                I got my PhD in Computational Science under the supervision of prof. 
-                                <a href="https://www.imperial.ac.uk/people/m.bronstein">Michael Bronstein</a>
-                                from the <a href="https://www.usi.ch/en">Universita' della Svizzera italiana</a> (USI) in Lugano, CH.
+                                I got my PhD in Computational Science from the <a href="https://www.usi.ch/en">Universita' della Svizzera italiana</a> (USI) in Lugano, CH,
+                                under the supervision of prof. <a href="https://www.imperial.ac.uk/people/m.bronstein">Michael Bronstein</a>.
                                 My research interests include 3D Computer Vision and 3D Deep Learning.
                                 I'm one of the pioneers of Geometric Deep Learning.
                             </p>
