--- a/sections/publications.html
+++ b/sections/publications.html
@@ -190,8 +190,8 @@
                         <a href="https://arxiv.org/abs/1605.06437">arXiv:1605.06437</a></small><br> -->
 
                     <a href="../data/pdf/2017_monet.pdf" class="badge badge-primary">pdf</a>
-                    <!-- <a href="#" class="badge badge-primary">biblio</a>
-                    <a href="#" class="badge badge-primary">slides</a>
+                    <a href="#" class="badge badge-primary">biblio</a>
+                    <!-- <a href="#" class="badge badge-primary">slides</a>
                     <a href="#" class="badge badge-primary">code <i class="fa fa-github"></i></a>
                     <a href="#" class="badge badge-primary">video</a>
                     <a href="#" class="badge badge-primary">poster</a> -->
